# pound

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Compatibility  Makefile  README.md  build.ninja
.github/workflows/: build.yml
WIP/fs/: bis_factory.cpp  registered_cache.h  romfs.h
WIP/fs/vfs/: vfs.h
android/: README.md
android/app/src/main/cpp/: native-lib.cpp
android/app/src/main/cpp/org/pound/poundemu/: NativeLibrary.cpp
assets/: README.md
assets/fw/: README.md
common/: assert.h  bit_field.h  common_funcs.h  hex_util.h  intrusive_list.h  parent_of_member.h  scope_exit.h  settings.h  settings_common.h  settings_enums.h  settings_input.h  settings_setting.h  string_util.h  swap.h  uuid.h
common/fs/: fs_util.h  path_util.h
common/logging/: log.h  types.h
core/: Pound.rc  README.md  core.h  main.cpp
core/ARM/: cpu.h
core/Base/: Assert.cpp  Assert.h  Config.cpp  Config.h  PathUtil.cpp  PathUtil.h  Thread.cpp  Types.h
core/Base/Logging/: Backend.cpp  Filter.cpp  Log.h  LogTypes.h  TextFormatter.cpp
core/JIT/: jit.cpp  jit.h
core/common/fs/: path_util.h
core/crypto/: aes_util.h  ctr_encryption_layer.h  encryption_layer.h  key_manager.h  partition_data_manager.h  xts_encryption_layer.h
core/fs/: bis_factory.cpp  bis_factory.h  card_image.cpp  card_image.h  common_funcs.h  content_archive.cpp  content_archive.h  control_metadata.h  errors.h  fs_directory.h  fs_filesystem.h  fsmitm_romfsbuild.h  nca_metadata.h  partition_filesystem.h  patch_manager.h  program_metadata.cpp  program_metadata.h  registered_cache.cpp  romfs.cpp  romfs.h  romfs_factory.cpp  romfs_factory.h  savedata_factory.cpp  savedata_factory.h  sdmc_factory.cpp  sdmc_factory.h  submission_package.cpp  submission_package.h  xts_archive.cpp  xts_archive.h
core/fs/vfs/: vfs.cpp  vfs.h  vfs_cached.cpp  vfs_cached.h  vfs_concat.cpp  vfs_concat.h  vfs_layered.cpp  vfs_layered.h  vfs_offset.cpp  vfs_offset.h  vfs_real.cpp  vfs_real.h  vfs_static.h  vfs_types.h  vfs_vector.cpp  vfs_vector.h
core/gpu/: README.md
core/gpu/vk/: emugpuvk.cpp
core/hle/: result.h
core/hle/kernel/: k_process.h
core/loader/: loader.h
core/memory/: arena.cpp  arena.h  dmnt_cheat_types.h
core/miscgui/: settings.cppwip
core/sys/: mman.h
docs/: compguide.md
gui/: CMakeLists.txt  Colors.h  GUIManager.cpp  GUIManager.h  Panel.h  Window.cpp  Window.h
gui/panels/: CPUPanel.cpp  CPUPanel.h  ConsolePanel.cpp  ConsolePanel.h  PerformancePanel.cpp  PerformancePanel.h
import/: README.md
import/common/logging/: log.h
resources/docs/: compguide.md
ui/: README.md  main.cpp
ui/gman/: README.md
